--- a/commander/package.json
+++ b/commander/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tsc": "tsc",
+    "dev": "ts-node-dev src/entrypoint.ts"
   },
   "keywords": [],
   "author": "milansuk@email.cz",
@@ -15,6 +16,10 @@
     "typescript": "^4.1.2"
   },
   "devDependencies": {
-    "eslint": "^7.14.0"
+    "@types/node": "^14.14.10",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "eslint": "^7.14.0",
+    "ts-node-dev": "^1.0.0"
   }
 }
