--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "kafkajs": "^1.15.0"
+    "@home-porn/kafka": "file:../kafka"
   },
   "devDependencies": {
-    "@home-porn/kafka": "file:../kafka",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.10",
+    "eslint": "^7.14.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.1.2"
   }
