--- a/models/package.json
+++ b/models/package.json
@@ -2,6 +2,7 @@
   "name": "@home-porn/models",
   "version": "1.0.0",
   "description": "",
+  "main": "dist/index.js",
   "scripts": {
     "tsc": "tsc"
   },
